manifests/dev/http-echo/Namespace-http-echo.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
  name: http-echo
