manifests/dev/http-echo/Service-http-echo.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-echo
  namespace: http-echo
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: http-echo
